--- a/react_intro/task_5/dashboard/package.json
+++ b/react_intro/task_5/dashboard/package.json
@@ -1,13 +1,12 @@
 {
   "name": "task_5",
   "version": "1.0.0",
-  "description": "",
+  "description": "From task8. Create a project using Webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "dev": "webpack --mode development",
-    "start-dev": "webpack-dev-server --open"
+    "test": "jest",
+    "start": "webpack-dev-server --mode development --config config/webpack.config.js",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +15,15 @@
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.8",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "image-webpack-loader": "^8.1.0",
+    "jest": "^29.7.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
