--- a/react_intro/task_5/dashboard/package.json
+++ b/react_intro/task_5/dashboard/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server --mode development --config config/webpack.config.js",
-    "build": "webpack --mode production"
+    "build": "webpack --config ./config/webpack.config.js --mode production"
   },
   "keywords": [],
   "author": "",
@@ -28,5 +28,12 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "web-vitals": "^3.5.2"
   }
 }
