--- a/React_component/task_5/dashboard/package.json
+++ b/React_component/task_5/dashboard/package.json
@@ -1,7 +1,7 @@
 {
   "name": "task_1",
   "version": "1.0.0",
-  "description": "React props Project",
+  "description": "React component",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -16,17 +16,18 @@
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@cfaester/enzyme-adapter-react-18": "^0.8.0",
     "babel-loader": "^9.1.3",
-    "chai": "^5.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.8",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "image-webpack-loader": "^8.1.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "style-loader": "^4.0.0",
+    "text-encoding": "^0.7.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
@@ -40,13 +41,13 @@
     "web-vitals": "^3.5.2"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "setupFiles": [
       "<rootDir>/config/setupTests.js"
     ],
     "moduleNameMapper": {
-      "\\.(css|sass)$": "<rootDir>/__mocks__/styleMock.js",
-      "\\.(jpg|jpeg|png|gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js",
-      "^.+\\.jsx?$": "babel-jest"
+      "\\.(jpg|jpeg|png|gif|webp|svg)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css)$": "<rootDir>/__mocks__/styleMock.js"
     }
   }
 }
