--- a/react_redux_connectors_and_providers/task_0/dashboard/package.json
+++ b/react_redux_connectors_and_providers/task_0/dashboard/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.6",
     "aphrodite": "^2.4.0",
